--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,12 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+  "start": "node index.js",
+  "postinstall": "npm rebuild bcrypt --build-from-source"
+
   },
+
+
   "author": "",
   "license": "ISC",
   "dependencies": {
